--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
-body {
-    background-color: blueviolet;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+header, nav, main, section, article, aside, summary, footer{
+    width: 90%;
+    max-width: 1200px;
+    padding: 20px;
+    margin: 10px 0;
+    border-radius: 5px;
+
+}
+header { 
+    background-color: #ff9999; 
+}
+
+nav {
+    background-color: #ffcc99;
+ }
+
+main { 
+    background-color: #ffff99;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+section { 
+    background-color: #ccff99;
+}
+
+article {
+    background-color: #99ff99;
+}
+
+aside { 
+    background-color: #99ffcc; 
+}
+
+summary {
+     background-color: #99ccff;
+ }
+
+footer { 
+    background-color: #cc99ff;
+ }
